METASOURCES = auto

bin_PROGRAMS = get put
noinst_HEADERS = 

get_SOURCES = get.c
get_CFLAGS = -W -Wall -g -O0 \
	      -I$(top_srcdir)/test -I$(top_srcdir)/src \
	      $(all_includes) 

put_SOURCES = put.c
put_CFLAGS = -W -Wall -g -O0 \
	      -I$(top_srcdir)/test -I$(top_srcdir)/src \
	      $(all_includes) 

